Creación de módulos y actualización de existentes

--- a/ProyectoMancariBlue/Views/Empleado/IndexPrestacion.cshtml
+++ b/ProyectoMancariBlue/Views/Empleado/IndexPrestacion.cshtml
@@ -14,7 +14,7 @@
         <h1><i class="fa fa-th-list" style="margin-right: 10px;"></i>Administración de Empleados</h1>
         <p>Empleados</p>
         <br>
-        <a asp-action="CrearEmpleado" asp-controller="Empleado" class="btn btn-primary"><i class="fa fa-plus" aria-hidden="true"></i>Crear Empleado</a>
+        <a asp-action="Index" asp-controller="Empleado" class="btn btn-primary"><i aria-hidden="true"></i>Lista de Empleados</a>
     </div>
     <ul class="app-breadcrumb breadcrumb side">
         <li class="breadcrumb-item"><i class="fa fa-home fa-lg"></i></li>
@@ -331,9 +331,6 @@
     <script src="~/js/plugins/jquery.datatables.min.js"></script>
     <script src="~/js/plugins/datatables.bootstrap.min.js"></script>
     <script type="text/javascript">$('#templeados').DataTable();</script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <!-- SweetAlert2 JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.2.0/sweetalert2.min.js"></script>
     <script>
