--- a/ProyectoMancariBlue/Views/Empleado/CrearEmpleado.cshtml
+++ b/ProyectoMancariBlue/Views/Empleado/CrearEmpleado.cshtml
@@ -70,7 +70,14 @@
                         </div>
                         <div class="form-group">
                             <label class="control-label">Puesto</label>
-                            <input class="form-control" />
+                            <select class="form-control">
+                                <option value="">Seleccionar...</option>
+                                <option value="Administrador">Administrador</option>
+                                <option value="Asistente">Asistente</option>
+                                <option value="Ganadero">Ganadero</option>
+                                <option value="Contador">Contador</option>
+                                <option value="Veterinario">Veterinario</option>
+                            </select>
                             <span class="text-danger">Campo requerido</span>
                         </div>
                         <div class="form-group">
