--- a/ProyectoMancariBlue/Views/Empleado/EditarEmpleado.cshtml
+++ b/ProyectoMancariBlue/Views/Empleado/EditarEmpleado.cshtml
@@ -76,7 +76,7 @@
                         </div>
                         <div class="form-group">
                             <label class="control-label">Fecha de Ingreso</label>
-                            <input type="date" class="form-control" value="02/04/2024" disabled />
+                            <input type="date" class="form-control" value="2024-02-15" disabled />
                         </div>
                         <div class="form-group">
                             <label class="control-label">Salario</label>
