--- a/ProyectoMancariBlue/Views/Shared/_Layout.cshtml
+++ b/ProyectoMancariBlue/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body class="app sidebar-mini">
     <header class="app-header">
-        <a class="app-header__logo" asp-controller="Home" asp-action="Index">MancariBlue</a>
+        <a class="app-header__logo" asp-controller="Home" asp-action="Index">MANCARI BLUE</a>
         <!-- <img src="~/img/logo.png" class="logo-image" width="30px" height="auto">  -->
 
         <!-- Sidebar toggle button--><a class="app-sidebar__toggle" href="#" data-toggle="sidebar" aria-label="Hide Sidebar"></a>
@@ -22,8 +22,8 @@
             <li class="dropdown">
                 <a class="app-nav__item" href="#" data-toggle="dropdown" aria-label="Open Profile Menu"><i class="fa fa-user fa-lg"></i></a>
                 <ul class="dropdown-menu settings-menu dropdown-menu-right">
-                    <li><a class="dropdown-item" asp-controller="User" asp-action="CambiarContrasena"><i class="fa fa-lock fa-lg"></i> Cambiar Contraseña</a></li>
-                    <li><a class="dropdown-item" asp-controller="User" asp-action="CerrarSesion"><i class="fa fa-sign-out fa-lg"></i>Cerrar Sesion</a></li>
+                    <li><a class="dropdown-item" asp-controller="Home" asp-action="CambiarContrasena"><i class="fa fa-lock fa-lg"></i> Cambiar Contraseña</a></li>
+                    <li><a class="dropdown-item" asp-controller="Home" asp-action="CerrarSesion"><i class="fa fa-sign-out fa-lg"></i>Cerrar Sesion</a></li>
                 </ul>
             </li>
         </ul>
@@ -57,17 +57,18 @@
             </li>
             <li class="nav-item dropdown" id="dropdownMenu">
                 <a class="app-menu__item dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="app-menu__icon fa fa-users"></i>
+                    <i class="app-menu__icon fa fa-tags"></i>
                     <span class="app-menu__label">Módulo Animales</span>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" asp-action="Index" asp-controller="Animal">Animales</a>
                     <a class="dropdown-item" asp-action="Index" asp-controller="Vacuna">Vacunas</a>
+                    <a class="dropdown-item" asp-action="IndexG" asp-controller="Animal">Registro Generacional</a>
                 </div>
             </li>
             <li class="nav-item dropdown" id="dropdownMenu">
                 <a class="app-menu__item dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="app-menu__icon fa fa-users"></i>
+                    <i class="app-menu__icon fa fa-truck"></i>
                     <span class="app-menu__label">Módulo Inventario</span>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -76,7 +77,7 @@
             </li>
             <li class="nav-item dropdown" id="dropdownMenu">
                 <a class="app-menu__item dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="app-menu__icon fa fa-users"></i>
+                    <i class="app-menu__icon fa fa-credit-card"></i>
                     <span class="app-menu__label">Módulo Proveedores</span>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -85,7 +86,7 @@
             </li>
             <li class="nav-item dropdown" id="dropdownMenu">
                 <a class="app-menu__item dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="app-menu__icon fa fa-users"></i>
+                    <i class="app-menu__icon fa fa-university"></i>
                     <span class="app-menu__label">Módulo Transacciones</span>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -94,13 +95,23 @@
             </li>
             <li class="nav-item dropdown" id="dropdownMenu">
                 <a class="app-menu__item dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <i class="app-menu__icon fa fa-users"></i>
+                    <i class="app-menu__icon fa fa-th-list"></i>
                     <span class="app-menu__label">Módulo Administrativo</span>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" asp-action="Index" asp-controller="Administración">Administración</a>
                 </div>
             </li>
+            <li class="nav-item dropdown" id="dropdownMenu">
+                <a class="app-menu__item dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="app-menu__icon fa fa-user"></i>
+                    <span class="app-menu__label">Módulo Usuarios</span>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" asp-action="Index" asp-controller="Administración">Usuarios Administrativo</a>
+                </div>
+            </li>
+
         </ul>
     </aside>
     <main role="main" class="app-content">
