--- a/ProyectoMancariBlue/wwwroot/css/main.css
+++ b/ProyectoMancariBlue/wwwroot/css/main.css
@@ -4,7 +4,7 @@
  * Author: Pratik Borsadiya
  * ================================*/
 @import url(https://fonts.googleapis.com/css?family=Lato:300,400,400i,700);
-@import url(https://fonts.googleapis.com/css?family=Niconne);
+@import url(https://fonts.googleapis.com/css?family=Courier);
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
@@ -38,7 +38,7 @@
     --breakpoint-md: 768px;
     --breakpoint-lg: 992px;
     --breakpoint-xl: 1200px;
-    --font-family-sans-serif: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    --font-family-sans-serif:  Barlow, sans-serif;
     --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
@@ -62,7 +62,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family: Barlow, sans-serif;
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.5;
@@ -227,7 +227,7 @@ caption {
 }
 
 th {
-  text-align: inherit;
+  text-align: center;
 }
 
 label {
@@ -1678,6 +1678,7 @@ pre code {
   padding: 0.75rem;
   vertical-align: top;
   border-top: 1px solid #dee2e6;
+  text-align: center;
 }
 
 .table thead th {
@@ -6376,7 +6377,7 @@ a.close.disabled {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family: Barlow, sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -6489,7 +6490,7 @@ a.close.disabled {
   z-index: 1060;
   display: block;
   max-width: 276px;
-  font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family: Barlow, sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -10700,7 +10701,7 @@ table.dataTable thead > tr > th.sorting_asc, table.dataTable thead > tr > th.sor
 table.dataTable thead > tr > td.sorting_asc,
 table.dataTable thead > tr > td.sorting_desc,
 table.dataTable thead > tr > td.sorting {
-  padding-right: 30px;
+  padding-right: 12px;
 }
 
 table.dataTable thead > tr > th:active,
@@ -14942,16 +14943,18 @@ be a descendant of the grid when it is being dragged.
 }
 
 .app-header__logo {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 auto;
-          flex: 1 0 auto;
-  color: #fff;
-  text-align: center;
-  font-family: 'Niconne';
-  padding: 0 15px;
-  font-size: 26px;
-  font-weight: 400;
-  line-height: 50px;
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 auto;
+    flex: 1 0 auto;
+    color: #fff;
+    text-align: center;
+    font-family: 'Courier';
+    padding: 0 15px;
+    font-size: 18px;
+    font-weight: 800;
+    line-height: 50px;
+    margin-right: 60px;
+    margin-top: 5px;
 }
 
 @media (min-width: 768px) {
@@ -15196,15 +15199,16 @@ be a descendant of the grid when it is being dragged.
 }
 
 .app-sidebar__user {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 10px;
-  margin-bottom: 20px;
-  color: #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding: 10px;
+    margin-bottom: 20px;
+    color: #fff;
+    margin-left: 10px;
 }
 
 .app-sidebar__user-avatar {
@@ -15217,6 +15221,8 @@ be a descendant of the grid when it is being dragged.
 .app-sidebar__user-name {
   font-size: 17px;
   line-height: 1.3;
+
+
 }
 
 .app-sidebar__user-name,
@@ -15346,7 +15352,7 @@ be a descendant of the grid when it is being dragged.
   }
   .sidebar-mini.sidenav-toggled .app-sidebar {
     left: 0;
-    width: 50px;
+    width: 70px;
     overflow: hidden;
   }
   .sidebar-mini.sidenav-toggled .app-sidebar:hover {
@@ -16379,7 +16385,7 @@ be a descendant of the grid when it is being dragged.
 }
  .login-content .logo {
     margin-bottom: 40px;
-    font-family: "Niconne";
+    font-family: "Courier";
     color: #fff;
     display: inline-flex;
     align-items: center;
@@ -16567,7 +16573,7 @@ be a descendant of the grid when it is being dragged.
 }
 
 .lockscreen-content .logo {
-  font-family: "Niconne";
+  font-family: "Courier";
   margin-bottom: 40px;
   color: #fff;
 }
