Actulización de Módulos

--- a/ProyectoMancariBlue/Views/Empleado/Index.cshtml
+++ b/ProyectoMancariBlue/Views/Empleado/Index.cshtml
@@ -69,7 +69,7 @@
                                            svcrove@outlook.com
                                         </td>
                                         <td>
-                                            Administrador
+                                            Ganaero
                                         </td>
                                 <td>
                                     02/04/2024
@@ -92,14 +92,14 @@
                                     1-1492-0416
                                 </td>
                                 <td>
-                                    Josue Rojas Chaves
+                                    Manuel Barrantes Garcia
                                 </td>
 
                                 <td>
-                                    svcrove@outlook.com
+                                    manu@outlook.com
                                 </td>
                                 <td>
-                                    Administrador
+                                    Asistente
                                 </td>
                                 <td>
                                     02/04/2024
@@ -121,14 +121,14 @@
                                     1-1492-0416
                                 </td>
                                 <td>
-                                    Josue Rojas Chaves
+                                    Ariana Montero Salazar
                                 </td>
 
                                 <td>
-                                    svcrove@outlook.com
+                                    armosa@outlook.com
                                 </td>
                                 <td>
-                                    Administrador
+                                    Veterinario
                                 </td>
                                 <td>
                                     02/04/2024
