--- a/ProyectoMancariBlue/Views/Shared/_Layout.cshtml
+++ b/ProyectoMancariBlue/Views/Shared/_Layout.cshtml
@@ -108,7 +108,7 @@
                     <span class="app-menu__label">Módulo Usuarios</span>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" asp-action="Index" asp-controller="Administración">Usuarios Administrativo</a>
+                    <a class="dropdown-item" asp-action="IndexA" asp-controller="Empleado">Usuarios</a>
                 </div>
             </li>
 
