--- a/ProyectoMancariBlue/Views/Empleado/EditarEmpleado.cshtml
+++ b/ProyectoMancariBlue/Views/Empleado/EditarEmpleado.cshtml
@@ -71,7 +71,7 @@
                         </div>
                         <div class="form-group">
                             <label class="control-label">Puesto</label>
-                            <input class="form-control" value="Adminsitrador" />
+                            <input class="form-control" value="Ganadero" />
 
                         </div>
                         <div class="form-group">
